[gd_scene load_steps=7 format=3 uid="uid://cfr0rws5dp860"]

[ext_resource type="Texture2D" uid="uid://sma1olhc6xnt" path="res://assets/menu/home.png" id="1_5aifs"]
[ext_resource type="Script" uid="uid://bmgav3cjfwrc" path="res://scripts/ui/main_menu_screen.gd" id="1_wu2n7"]
[ext_resource type="Texture2D" uid="uid://bubpj0wuknv46" path="res://assets/menu/editor.png" id="2_wu2n7"]
[ext_resource type="Texture2D" uid="uid://ugk86yyoa2we" path="res://assets/menu/achievement.png" id="3_u4jdq"]
[ext_resource type="Texture2D" uid="uid://bvy6gevhw38d5" path="res://assets/menu/progress.png" id="4_8ydwl"]
[ext_resource type="Texture2D" uid="uid://bfsxoeuenr88y" path="res://assets/menu/profile.png" id="5_bgasx"]

[node name="MainMenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu2n7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.113725, 0.184314, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 96)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/Panel/SubViewportContainer"]
unique_name_in_owner = true
render_target_update_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="HomeButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("1_5aifs")

[node name="EditorButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_wu2n7")

[node name="AchievButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("3_u4jdq")

[node name="ProgressButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("4_8ydwl")

[node name="ProfileButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("5_bgasx")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EditorButton" to="." method="_on_editor_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AchievButton" to="." method="_on_achiev_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ProgressButton" to="." method="_on_progress_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ProfileButton" to="." method="_on_profile_button_pressed"]
